# destroy_squares

./: CMakeLists.txt  build.sh  configure.sh  run.sh
src/: Game.cpp  Game.h  main.cpp
